--- a/app/src/main/res/layout/activity_fibonacci.xml
+++ b/app/src/main/res/layout/activity_fibonacci.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".FiboacciActivity">
 
     <TextView
-        android:id="@+id/textview_main_fibonacci"
+        android:id="@+id/textview_fibonacci_values"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical" />
