--- a/app/src/main/res/layout/fragment_meme.xml
+++ b/app/src/main/res/layout/fragment_meme.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FibonacciActivity">
+    tools:context=".MemeFragment">
 
     <TextView
-        android:id="@+id/textview_fibonacci_values"
+        android:id="@+id/textview_meme"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="vertical" />
