--- a/app/src/main/res/layout/fragment_meme.xml
+++ b/app/src/main/res/layout/fragment_meme.xml
@@ -1,14 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="8dp"
     tools:context=".MemeFragment">
 
-    <TextView
-        android:id="@+id/textview_meme"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical" />
+    <EditText
+        android:id="@+id/edittext_meme_input"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:singleLine="false"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toTopOf="@+id/textview_meme_output"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</ScrollView>
+    <TextView
+        android:id="@+id/textview_meme_output"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:singleLine="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edittext_meme_input" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
