--- a/app/src/main/res/layout/fragment_fibonacci.xml
+++ b/app/src/main/res/layout/fragment_fibonacci.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FibonacciFragment">
+    tools:context=".fibonacci.FibonacciFragment">
 
     <TextView
         android:id="@+id/textview_fibonacci_values"
