--- a/app/src/main/res/layout/fragment_meme.xml
+++ b/app/src/main/res/layout/fragment_meme.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
-    tools:context=".MemeFragment">
+    tools:context=".meme.MemeFragment">
 
     <EditText
         android:id="@+id/edittext_meme_input"
